redis cluster 可用性

--- a/2.Redis/3.redis-deployment-architecture.md
+++ b/2.Redis/3.redis-deployment-architecture.md
@@ -225,3 +225,168 @@ Hash tags能够保证多个key同时命中同一个哈希槽，通常用于多ke
 也就是说任意两个节点之间存在两条连接，这些连接都是长连接而非按需建立的连接。
 
 每个节点的总线端口会一直等待连接，并且会响应每一个`PING`消息（即使是非集群节点的`PING`），但是非集群节点发来的消息包会被丢弃。
+
+### 3.4 集群的可用性
+
+我们想知道当集群出现故障时，是如何做到高可用的。来试验一下，本地启动6个redis实例，端口从7000-7005，然后将它们构建成Redis Cluster，做3个master，3个slave：
+
+```shell
+>redis-cli.exe --cluster create 127.0.0.1:7000 127.0.0.1:7001 127.0.0.1:7002 127.0.0.1:7003 127.0.0.1:7004 127.0.0.1:7005 --cluster-replicas 1
+>>> Performing hash slots allocation on 6 nodes...
+Master[0] -> Slots 0 - 5460
+Master[1] -> Slots 5461 - 10922
+Master[2] -> Slots 10923 - 16383
+Adding replica 127.0.0.1:7004 to 127.0.0.1:7000
+Adding replica 127.0.0.1:7005 to 127.0.0.1:7001
+Adding replica 127.0.0.1:7003 to 127.0.0.1:7002
+>>> Trying to optimize slaves allocation for anti-affinity
+[WARNING] Some slaves are in the same host as their master
+M: 2061326bb18d8c9ff581befc4c715365526d1240 127.0.0.1:7000
+   slots:[0-5460] (5461 slots) master
+M: ef5608fab0a3ce1443cdce9e88553baf92a6b5c1 127.0.0.1:7001
+   slots:[5461-10922] (5462 slots) master
+M: 66811444ce334ea583090ab4d841fe973d70c08c 127.0.0.1:7002
+   slots:[10923-16383] (5461 slots) master
+S: e77a41e0b95e9de19d7827f92de037564aac9612 127.0.0.1:7003
+   replicates 66811444ce334ea583090ab4d841fe973d70c08c
+S: bf4b38f2a7e77e5e16215dbfe15c4dccd33fd89d 127.0.0.1:7004
+   replicates 2061326bb18d8c9ff581befc4c715365526d1240
+S: bddcb5e8c4c23ce7be80c179093797ff757ca10a 127.0.0.1:7005
+   replicates ef5608fab0a3ce1443cdce9e88553baf92a6b5c1
+Can I set the above configuration? (type 'yes' to accept): yes
+>>> Nodes configuration updated
+>>> Assign a different config epoch to each node
+>>> Sending CLUSTER MEET messages to join the cluster
+Waiting for the cluster to join
+..
+>>> Performing Cluster Check (using node 127.0.0.1:7000)
+M: 2061326bb18d8c9ff581befc4c715365526d1240 127.0.0.1:7000
+   slots:[0-5460] (5461 slots) master
+   1 additional replica(s)
+S: bf4b38f2a7e77e5e16215dbfe15c4dccd33fd89d 127.0.0.1:7004
+   slots: (0 slots) slave
+   replicates 2061326bb18d8c9ff581befc4c715365526d1240
+S: e77a41e0b95e9de19d7827f92de037564aac9612 127.0.0.1:7003
+   slots: (0 slots) slave
+   replicates 66811444ce334ea583090ab4d841fe973d70c08c
+M: ef5608fab0a3ce1443cdce9e88553baf92a6b5c1 127.0.0.1:7001
+   slots:[5461-10922] (5462 slots) master
+   1 additional replica(s)
+S: bddcb5e8c4c23ce7be80c179093797ff757ca10a 127.0.0.1:7005
+   slots: (0 slots) slave
+   replicates ef5608fab0a3ce1443cdce9e88553baf92a6b5c1
+M: 66811444ce334ea583090ab4d841fe973d70c08c 127.0.0.1:7002
+   slots:[10923-16383] (5461 slots) master
+   1 additional replica(s)
+[OK] All nodes agree about slots configuration.
+>>> Check for open slots...
+>>> Check slots coverage...
+[OK] All 16384 slots covered.
+```
+
+现在构建好了如下拓扑结构的Redis集群：
+
+![image-20210916214518149](assets/image-20210916214518149.png)
+
+我们连接上任意一个节点，查看一下集群信息和集群节点信息：
+
+```shell
+127.0.0.1:7000> cluster info
+cluster_state:ok
+cluster_slots_assigned:16384
+cluster_slots_ok:16384
+cluster_slots_pfail:0
+cluster_slots_fail:0
+cluster_known_nodes:6
+cluster_size:3
+cluster_current_epoch:6
+cluster_my_epoch:1
+cluster_stats_messages_ping_sent:1349
+cluster_stats_messages_pong_sent:1366
+cluster_stats_messages_sent:2715
+cluster_stats_messages_ping_received:1361
+cluster_stats_messages_pong_received:1349
+cluster_stats_messages_meet_received:5
+cluster_stats_messages_received:2715
+127.0.0.1:7000> cluster nodes
+bf4b38f2a7e77e5e16215dbfe15c4dccd33fd89d 127.0.0.1:7004@17004 slave 2061326bb18d8c9ff581befc4c715365526d1240 0 1631800140511 5 connected
+e77a41e0b95e9de19d7827f92de037564aac9612 127.0.0.1:7003@17003 slave 66811444ce334ea583090ab4d841fe973d70c08c 0 1631800141000 4 connected
+ef5608fab0a3ce1443cdce9e88553baf92a6b5c1 127.0.0.1:7001@17001 master - 0 1631800141215 2 connected 5461-10922
+bddcb5e8c4c23ce7be80c179093797ff757ca10a 127.0.0.1:7005@17005 slave ef5608fab0a3ce1443cdce9e88553baf92a6b5c1 0 1631800141518 6 connected
+66811444ce334ea583090ab4d841fe973d70c08c 127.0.0.1:7002@17002 master - 0 1631800139206 3 connected 10923-16383
+2061326bb18d8c9ff581befc4c715365526d1240 127.0.0.1:7000@17000 myself,master - 0 1631800141000 1 connected 0-5460
+```
+
+现在我们将`7001`这台master下线，再查看一下信息：
+
+```shell
+127.0.0.1:7000> cluster info
+cluster_state:ok
+cluster_slots_assigned:16384
+cluster_slots_ok:16384
+cluster_slots_pfail:0
+cluster_slots_fail:0
+cluster_known_nodes:6
+cluster_size:3
+cluster_current_epoch:7
+cluster_my_epoch:1
+cluster_stats_messages_ping_sent:2082
+cluster_stats_messages_pong_sent:2064
+cluster_stats_messages_fail_sent:5
+cluster_stats_messages_auth-ack_sent:1
+cluster_stats_messages_sent:4152
+cluster_stats_messages_ping_received:2059
+cluster_stats_messages_pong_received:2060
+cluster_stats_messages_meet_received:5
+cluster_stats_messages_fail_received:1
+cluster_stats_messages_auth-req_received:1
+cluster_stats_messages_received:4126
+127.0.0.1:7000> cluster nodes
+bf4b38f2a7e77e5e16215dbfe15c4dccd33fd89d 127.0.0.1:7004@17004 slave 2061326bb18d8c9ff581befc4c715365526d1240 0 1631800379835 5 connected
+e77a41e0b95e9de19d7827f92de037564aac9612 127.0.0.1:7003@17003 slave 66811444ce334ea583090ab4d841fe973d70c08c 0 1631800380339 4 connected
+ef5608fab0a3ce1443cdce9e88553baf92a6b5c1 127.0.0.1:7001@17001 master,fail - 1631800351797 1631800350589 2 connected
+bddcb5e8c4c23ce7be80c179093797ff757ca10a 127.0.0.1:7005@17005 master - 0 1631800380840 7 connected 5461-10922
+66811444ce334ea583090ab4d841fe973d70c08c 127.0.0.1:7002@17002 master - 0 1631800379331 3 connected 10923-16383
+2061326bb18d8c9ff581befc4c715365526d1240 127.0.0.1:7000@17000 myself,master - 0 1631800378000 1 connected 0-5460
+```
+
+我们发现集群信息中的集群状态（`cluster_state`）、slots数量及状态（`cluster_slots_assigned`、`cluster_slots_ok`）均是正常的。再看集群节点信息中，`7001`这台master被标记了`fail`，`7005`这台节点之前是slave，现在被提升为了master，且承担了1/3的slots。
+
+通过实验可以看到，Redis集群在master故障时，自动将slave提升为master（这里看不到之前的master与slave之间的关系，猜想7005之前就是之前7001的slave，且7005保存了7001中slots的副本，才那么快被提升为master，否则slots转移还是比较耗时间的，经实验1/3的空的slots迁移（手动）大概需要一分钟左右）。这样就实现了高可用。
+
+![image-20210916220536224](assets/image-20210916220536224.png)
+
+现在我有点好奇如果`7005`宕机了会是什么情况？操作下线后查看信息：
+
+```shell
+127.0.0.1:7000> cluster info
+cluster_state:fail
+cluster_slots_assigned:16384
+cluster_slots_ok:10922
+cluster_slots_pfail:0
+cluster_slots_fail:5462
+cluster_known_nodes:6
+cluster_size:3
+cluster_current_epoch:7
+cluster_my_epoch:1
+cluster_stats_messages_ping_sent:4279
+cluster_stats_messages_pong_sent:3419
+cluster_stats_messages_fail_sent:10
+cluster_stats_messages_auth-ack_sent:1
+cluster_stats_messages_sent:7709
+cluster_stats_messages_ping_received:3414
+cluster_stats_messages_pong_received:3381
+cluster_stats_messages_meet_received:5
+cluster_stats_messages_fail_received:2
+cluster_stats_messages_auth-req_received:1
+cluster_stats_messages_received:6803
+127.0.0.1:7000> cluster nodes
+bf4b38f2a7e77e5e16215dbfe15c4dccd33fd89d 127.0.0.1:7004@17004 slave 2061326bb18d8c9ff581befc4c715365526d1240 0 1631801261537 5 connected
+e77a41e0b95e9de19d7827f92de037564aac9612 127.0.0.1:7003@17003 slave 66811444ce334ea583090ab4d841fe973d70c08c 0 1631801261938 4 connected
+ef5608fab0a3ce1443cdce9e88553baf92a6b5c1 127.0.0.1:7001@17001 master,fail - 1631800351797 1631800350589 2 connected
+bddcb5e8c4c23ce7be80c179093797ff757ca10a 127.0.0.1:7005@17005 master,fail - 1631801248159 1631801247473 7 connected 5461-10922
+66811444ce334ea583090ab4d841fe973d70c08c 127.0.0.1:7002@17002 master - 0 1631801262945 3 connected 10923-16383
+2061326bb18d8c9ff581befc4c715365526d1240 127.0.0.1:7000@17000 myself,master - 0 1631801261000 1 connected 0-5460
+```
+
+哦豁，集群失效了：`cluster_state:fail`，集群正常服务的slots只有：`cluster_slots_ok:10922`，丢掉了1/3，看来Redis集群的高可用能力是有限的，如果某个承载slots的master及其所有slave均故障，或者同时与集群的其他节点发生网络隔离，集群的高可用能力就是失效的。
