redis分布式锁---加一个图

--- a/2.Redis/5.redis-distlock.md
+++ b/2.Redis/5.redis-distlock.md
@@ -25,6 +25,8 @@
 3. 触发故障转移机制，从节点被提升为主节点。
 4. 客户端B在新的主节点中拿到了相同的锁。**互斥失效了！**
 
+![image-20210925001248615](assets/image-20210925001248615.png)
+
 看具体业务场景吧，可能有的业务在故障发生时，允许多个客户端同时持有同一把锁，那么用这个基于故障转移的方案也没什么问题。但是我觉得大部分用到分布式场景中，出现这种状况时不能接受的。
 
 ## 3 单节点方案的正确操作
