--- a/2.Redis/5.redis-distlock.md
+++ b/2.Redis/5.redis-distlock.md
@@ -27,7 +27,28 @@
 
 ![image-20210925001248615](assets/image-20210925001248615.png)
 
-看具体业务场景吧，可能有的业务在故障发生时，允许多个客户端同时持有同一把锁，那么用这个基于故障转移的方案也没什么问题。但是我觉得大部分用到分布式场景中，出现这种状况时不能接受的。
+看具体业务场景吧，可能有的业务在故障发生时，允许多个客户端同时持有同一把锁，那么用这个基于故障转移的方案也没什么问题。但是我觉得大部分用到分布式的场景中，出现这种状况是不能接受的。
 
 ## 3 单节点方案的正确操作
 
+这节讨论的算法是基于“一个永远不会挂的单节点Redis实例”方案。
+
+为了解决在竞争时可能出现的“**误删其他客户端持有的锁**”的问题，我们引入一个随机数，用于标记一个锁。比如在获取锁时，这么做：
+
+```shell
+SET resource_name my_random_value NX PX 30000
+```
+
+`NX`选项来限制只有该key不存在时才能添加key成功，`px`选项设置锁的超时时间是30000毫秒。该key的值被设置为一个随机数，这个随机数必须是全局唯一的。
+
+这个随机数将用来保证释放锁时的安全性：客户端在删锁时必须保证本地记录的随机数与该key存的随机数一致。一般通过lua脚本来实现：
+
+```lua
+if redis.call("get",KEYS[1]) == ARGV[1] then
+    return redis.call("del",KEYS[1])
+else
+    return 0
+end
+```
+
+lua脚本保证了“查key存的值”、“校验key的值是否一致”、“删除key”这三个操作的原子性，如果不能保证原子，还是会出现安全问题：
