--- a/2.Redis/5.redis-distlock.md
+++ b/2.Redis/5.redis-distlock.md
@@ -52,3 +52,28 @@ end
 ```
 
 lua脚本保证了“查key存的值”、“校验key的值是否一致”、“删除key”这三个操作的原子性，如果不能保证原子，还是会出现安全问题：
+
+1. 客户端A占用了一个锁（a_key），并设置了超时时间。
+2. 客户端A准备释放锁，**查询（a_key）对应的随机数**。
+3. **客户端A校验随机数OK**。
+4. a_key过期。
+5. 客户端B占用该锁（a_key）。
+6. **客户端A删除锁（a_key）**。
+
+客户端A将客户端B占用的锁释放掉了！
+
+| 时间点 | 客户端A                                   | 客户端B           |
+| ------ | ----------------------------------------- | ----------------- |
+| time1  | SET a_key random_value1 NX PX 3000        |                   |
+| time2  | 处理业务结束，GET a_key得到 random_value1 |                   |
+| time3  | random_value2校验OK                       |                   |
+| time4  | a_key超时                                 |                   |
+| time5  |                                           | SET a_key加锁成功 |
+| time6  | DEL a_key释放锁                           |                   |
+
+可见通过lua脚本来保证原子操作的重要性。这一节的方案适用于单节点Redis，且假设了不会发生单点故障，但如果在分布式的Redis部署中，我们应该采用什么方案呢？
+
+## 4 Redlock算法
+
+在分布式版本的方案中，我们假定有N个Redis主节点，所有节点相互之间独立，而且不引入主从复制机制或其他分布式协调机制
+
