redis分布式锁-安全性讨论

--- a/2.Redis/5.redis-distlock.md
+++ b/2.Redis/5.redis-distlock.md
@@ -129,7 +129,17 @@ Redlock算法安全吗？我们来看看在不同场景下发生了什么。
 
 但是我们仍希望在多个客户端竞争锁时，不会出现多个客户端同时获锁成功的情况。
 
-如果一个客户端给majority数量的实例加锁所花费的时间，接近或大于锁的最大存活时间（SET操作中的TTL），那么应当认为获锁失败，并给所有实例发送解锁操作。所以我们只需要考虑加锁花费时间在最大存活时间之内的场景。在这个场景下，与上面的陈述中，对于`MIN_VALIDITY`（的最大存活时间来说），没有客户端能够重新获锁成功。
+如果一个客户端给majority数量的实例加锁所花费的时间，接近或大于锁的最大存活时间（SET操作中的TTL），那么应当认为获锁失败，并给所有实例发送解锁操作。所以我们只需要考虑加锁花费时间在最大存活时间之内的场景。在这个场景下，与上面的陈述中，对于`MIN_VALIDITY`（的最大存活时间来说），没有客户端能够重新获锁成功。所以只有在加锁花费时间大于TTL的情况下（锁失效），才有可能出现多个客户端同时在N/2+1个实例上同时上锁。（这段太绕了，我们画图来理解一下这种场景，先看正常加锁情况：）
+
+![image-20211004230929876](assets/image-20211004230929876.png)
+
+再看一下竞争时，同时有多个客户端给N/2+1个实例上锁的情况：
+
+![image-20211004231739303](assets/image-20211004231739303.png)
+
+在上图中，在时间点T1，客户端A（蓝色线条）与客户端B（红色线条）均认为自己在majority数量的实例上加锁成功。
+
+（这一节整体比较绕，作者想表达的意思是Redlock的安全体现在**加锁花费的时间不能超过锁的实际最大存活时间**，不满足这个条件的需要认为加锁失败。）
 
 ## 8 活性（liveness）讨论
 
