--- a/2.Redis/5.redis-distlock.md
+++ b/2.Redis/5.redis-distlock.md
@@ -143,7 +143,17 @@ Redlock算法安全吗？我们来看看在不同场景下发生了什么。
 
 ## 8 活性（liveness）讨论
 
+Redlock的活性是基于如下三个特性：
+
+1. 锁的自动释放（key失效）：所有key最终都可以被上锁。
+2. 当获锁失败时，或是业务（工作）完成/终止后，客户端会主动去释放锁。这样下一次的获锁就不需要等待key超时失效。
+3. 在重试获锁前，客户端会等待一段时间再去重试，这个等待时间一般需要比获取锁（majority数量的实例上上锁）需要的时间要长，以免发生脑裂的情况。
+
+但是需要注意的是，当发生网络分区（隔离）时，系统可能面临TTL时长的不可用。如果是持续性的网络分区，那么系统可能长时间都是不可用的。一般这种情况出现在客户端获锁成功，但是在删除锁之前发生了网络分区。
+
 ## 9 性能、崩溃恢复、fsync
+
+
 
 ## 10 令Redlock更加可靠：扩展锁
 
