--- a/2.Redis/5.redis-distlock.md
+++ b/2.Redis/5.redis-distlock.md
@@ -153,6 +153,11 @@ Redlock的活性是基于如下三个特性：
 
 ## 9 性能、崩溃恢复、fsync
 
+许多用户选择Redis作为分布式锁的服务器，在获锁与释放锁的延迟上（低延迟），以及每秒可以执行的获锁/释放锁的操作数量上（高吞吐量），都需要较高的性能表现。为满足这个需求，在与N个Redis实例的通信上，降低延迟的策略肯定是**多路复用**（或者是“穷人的多路复用”，将socket置为非阻塞模式，同时发送所有命令，并之后同时读取所有命令，假设客户端与每个实例之间的RTT都差不多）。
+
+不过对于“崩溃-恢复”系统模型来讲，我们还需要考虑持久性的问题。
+
+我们来描述一下这个问题，假定我们的Redis实例都没有设置持久化方案，一共有5台实例，在一次加锁过程中客户端A在3个实例上成功上锁。这时，这仨实例中的某一台宕机重启了，由于没有设置持久化，重启后的实例是空的数据集，对于同一个资源，它又能被上锁了，客户端B紧跟着在3个实例上成功上锁，这就违反了排他性。
 
 
 ## 10 令Redlock更加可靠：扩展锁
