--- a/2.Redis/5.redis-distlock.md
+++ b/2.Redis/5.redis-distlock.md
@@ -137,7 +137,7 @@ Redlock算法安全吗？我们来看看在不同场景下发生了什么。
 
 ![image-20211004231739303](assets/image-20211004231739303.png)
 
-在上图中，在时间点T1，客户端A（蓝色线条）与客户端B（红色线条）均认为自己在majority数量的实例上加锁成功。
+在上图中，在时间点T1，客户端A（蓝色线条）与客户端B（红色线条）均认为自己在majority数量的实例上加锁成功。（这不影响安全性，客户端A在计算完`MIN_VALIDITY`后会认为自己获锁失败。）
 
 （这一节整体比较绕，作者想表达的意思是Redlock的安全体现在**加锁花费的时间不能超过锁的实际最大存活时间**，不满足这个条件的需要认为加锁失败。）
 
@@ -157,7 +157,15 @@ Redlock的活性是基于如下三个特性：
 
 不过对于“崩溃-恢复”系统模型来讲，我们还需要考虑持久性的问题。
 
-我们来描述一下这个问题，假定我们的Redis实例都没有设置持久化方案，一共有5台实例，在一次加锁过程中客户端A在3个实例上成功上锁。这时，这仨实例中的某一台宕机重启了，由于没有设置持久化，重启后的实例是空的数据集，对于同一个资源，它又能被上锁了，客户端B紧跟着在3个实例上成功上锁，这就违反了排他性。
+我们来描述一下这个问题，假定我们的Redis实例都没有设置持久化方案，一共有5台实例，在一次加锁过程中客户端A在3个实例上成功上锁。这时，这仨实例中的某一台需要重启，由于没有设置持久化，重启后的实例是空的数据集，对于同一个资源，它又能被上锁了，客户端B紧跟着在3个实例上成功上锁，这就违反了排他性。
+
+如果我们开启AOF持久化，这个问题就会有所改善。我们可以通过SHOTDOWN命令将实例停机然后重启（优雅重启）。而且因为Redis超时机制是“语义”的实现，即使是停机状态，时间也会往前走，该超时的key不会受停机的影响。但是这一切的前提是“正常停机”，如果遇到断电停机怎么办？如果Redis设置的是每秒fsync一次（默认），那么在Redis重启后很大概率上会发生key丢失。理论上来说，如果你想在不同的“停机”场景下，均能保证锁的安全性，那么只能把fsync设置成allways。但是这样会严重削弱Redis的性能，使得Redis的性能被拉低到其他CP系统（的分布式锁方案）水平。
+
+不管怎么说，总比上一个问题方案强。有没有更好的方案呢？试想一下，如果某Redis实例在重启后，不参与到任何仍有效key的工作中去，是不是就能保证安全性了？所以在实例重启的那一刻，当前仍有效的锁，应当由其他实例持有，而不是发生重启的这一台。（之前不是担心实例重启后key丢失，从而导致重复加锁嘛，现在这样，重启那一刻全局仍未失效的锁，对于重启的那台实例来说，我不参与这些锁的加解锁。）
+
+有一个比较取巧的实现方案。所有的锁不是都有一个TTL嘛，那么我让Redis在停机后，等待最大的那个TTL过后再启动，彼时，所有停机时未失效的锁都已过期。（懵逼时刻，停机期间新增的key怎么说？）
+
+使用*延迟重启*基本上能够在未设置持久化方案时保证安全性，但是这也可能会导致可用性失效，如果majority数量的实例发生停机，至少在TTL时间内，全局都将是不可用的（全局都不能新增锁）。
 
 
 ## 10 令Redlock更加可靠：扩展锁
