redis分布式锁--锁续期

--- a/2.Redis/5.redis-distlock.md
+++ b/2.Redis/5.redis-distlock.md
@@ -2,7 +2,7 @@
 
 在分布式环境下，分布式锁是个相当有用的技术，常见的分布式锁的实现有基于数据库、zookeeper、Redis，这里主要讲Redis的分布式锁。本文是翻译整理于官方文档[Distributed locks with Redis](https://redis.io/topics/distlock)。
 
-本文提出了Redis分布式锁的一种比较规范的算法，官方称之为Redlock。这个算法相对于一些单节点的方案来说更可靠一点。
+本文提出了Redis分布式锁的一种比较规范的算法，官方称之为Redlock。这个算法相对于一些单节点的方案来说更可靠。
 
 ## 1 安全性和可用性
 
@@ -163,26 +163,14 @@ Redlock的活性是基于如下三个特性：
 
 不管怎么说，总比上一个问题方案强。有没有更好的方案呢？试想一下，如果某Redis实例在重启后，不参与到任何仍有效key的工作中去，是不是就能保证安全性了？所以在实例重启的那一刻，当前仍有效的锁，应当由其他实例持有，而不是发生重启的这一台。（之前不是担心实例重启后key丢失，从而导致重复加锁嘛，现在这样，重启那一刻全局仍未失效的锁，对于重启的那台实例来说，我不参与这些锁的加解锁。）
 
-有一个比较取巧的实现方案。所有的锁不是都有一个TTL嘛，那么我让Redis在停机后，等待最大的那个TTL过后再启动，彼时，所有停机时未失效的锁都已过期。（懵逼时刻，停机期间新增的key怎么说？）
+有一个比较取巧的实现方案。所有的锁不是都有一个TTL嘛，那么我让Redis在停机后，等待最大的那个TTL过后再启动，彼时，所有停机时未失效的锁都已过期。（懵逼，停机期间新增的key怎么说？）
 
 使用*延迟重启*基本上能够在未设置持久化方案时保证安全性，但是这也可能会导致可用性失效，如果majority数量的实例发生停机，至少在TTL时间内，全局都将是不可用的（全局都不能新增锁）。
 
+## 10 令Redlock更加可靠：锁续期
 
-## 10 令Redlock更加可靠：扩展锁
+如果client上需要加锁的业务都是一些短步骤，那么可以使用较短的锁失效时间，并引入锁续期机制。客户端如果在业务执行到一半时，发现锁快到期了，可以向所有实例发送lua脚本来延长锁的有效期，对应key的值仍然存之前用的那个随机值。
 
+只有能够在majority数量的实例上给锁续期，且花费的时间不超过有效期，客户端才允许执行锁续期（与加锁的逻辑类似）。
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+引入这个机制的话，不应该改变当前算法，所以需要限制锁续期的最大重试次数，以免破坏锁的活性（liveness）。
