--- a/3.MySQL/1.mysql-infrastructure.md
+++ b/3.MySQL/1.mysql-infrastructure.md
@@ -24,6 +24,19 @@
 mysql -h127.0.0.1 -P3306 -uroot -p
 ```
 
-随后在下面的交互中输入密码，然后终端（客户端）与MySQL建立连接，接着连接器就会校验你登陆的用户名与密码。如果校验失败，则会给你一个`"Access denied for user"`错误。用户名密码认证通过后，连接器会从权限表中查出你的权限，并据此限制你后面的数据库操作。不过如果在已经成功连接后，再有人修改你登陆的用户的权限，也不会影响你当前已有的权限（登陆时查出的权限），新的权限会在你重新连接后刷新。
+在随后的交互中输入密码，终端（客户端）会与MySQL建立连接，接着连接器就会校验你登陆的用户名与密码。如果校验失败，则会给你一个`"Access denied for user"`错误。用户名密码认证通过后，连接器会从权限表中查出你的权限，并据此限制你后面的数据库操作。不过如果在已经成功连接后，再有人修改你登陆的用户的权限，也不会影响你当前已有的权限（登陆时查出的权限），新的权限会在你重新连接后刷新。
 
 客户端与MySQL建立的连接一般都是长连接，后续的SQL执行都是依赖此连接。不过连接器还会处理长时间不活动的连接，可以通过`show processlist`查看连接的状态与连接的时长。一般如果某个连接空闲超过8小时，连接器会断开该连接，这个8小时可以通过参数`"wait_timeout"`控制。
+
+## 2 查询缓存
+
+在MySQL服务器接收到一条查询sql后，会先去检查“查询缓存”，如果命中了缓存，则会立刻向客户端返回存储在查询缓存中的记录（结果），否则继续后面的执行阶段。执行完成后，查询结果会被放入查询缓存中。
+
+可以通过`SHOW VARIABLES LIKE 'have_query_cache'`查看当前数据库版本是否支持查询缓存，并通过`SHOW VARIABLES LIKE 'query_cache_type'`查看当前是否开启了查询缓存。可通过参数`query_cache_type`来控制开启查询缓存，`0`或`OFF`表示关闭，`1`或`ON`表示开启，`2`或`DEMAND`表示按需使用查询缓存，意思是只有在sql中显示指定（SQL_CACHE）才会使用查询缓存。
+
+在实际使用中一般不会开启查询缓存，因为查询缓存的失效非常频繁，**对于表的更新操作会直接清空该表对应的所有查询缓存**。除非你的数据库存的是配置之类的静态数据，大部分时间是不发生变更的，才需要考虑开启查询缓存。
+
+而且MySQL 8.0直接干掉了查询缓存这个功能。
+
+## 3 分析器
+
