--- a/3.MySQL/1.mysql-infrastructure.md
+++ b/3.MySQL/1.mysql-infrastructure.md
@@ -40,3 +40,19 @@ mysql -h127.0.0.1 -P3306 -uroot -p
 
 ## 3 分析器
 
+上面说到查询缓存，如果一条查询sql未命中查询缓存，执行过程就会走到分析器。在这一步，MySQL会知道**你要做什么**。分析器的作用是对输入的sql做词法分析和语法分析。拿一条sql举例：
+
+```sql
+SELECT * FROM T WHERE ID = 1;
+```
+
+词法分析的作用是识别这条sql每个字符串代表的含义，比如识别出`SELECT`，知道了这是一条查询语句，将`T`识别为`表T`，将`ID`识别为`列ID`。
+
+词法分析做完后会做语法分析，会根据词法分析的结果及SQL规则这条sql是否满足MySQL语法规范。
+
+语句有问题就会抛出“You have an error in your SQL syntax”。
+
+### 4 优化器
+
+sql通过了分析器的分析，在执行之前，需要对sql做一次优化。比如有多个索引时决定索引的使用，比如在关联查询时，决定连接的顺序。
+
