--- a/3.MySQL/1.mysql-infrastructure.md
+++ b/3.MySQL/1.mysql-infrastructure.md
@@ -50,9 +50,32 @@ SELECT * FROM T WHERE ID = 1;
 
 词法分析做完后会做语法分析，会根据词法分析的结果及SQL规则这条sql是否满足MySQL语法规范。
 
-语句有问题就会抛出“You have an error in your SQL syntax”。
+语句有问题就会抛出“*You have an error in your SQL syntax*”。
 
-### 4 优化器
+## 4 优化器
 
-sql通过了分析器的分析，在执行之前，需要对sql做一次优化。比如有多个索引时决定索引的使用，比如在关联查询时，决定连接的顺序。
+sql通过了分析器的分析后，在执行之前，还需要对sql做一次优化。比如有多个索引时决定索引的使用，比如在关联查询时，决定连接的顺序。
 
+还是拿sql举例：
+
+```sql
+SELECT * FROM t1 JOIN t2 USING(id) WHERE t1.c = 'x' and t2.d = 'y';
+```
+
+试想一下，MySQL要执行这条查询，可以怎么做？
+
+> 在t1中命中一条c = 'x'的记录，拿这条记录的id去t2中查询对应id的记录，再看t2中这条记录的d是否等于'y'。
+
+这不是唯一解法，还可以从t2入手：
+
+> 在t2中命中一条d = 'y'的记录，拿t2中的这条记录的id去t1中查询对应的记录，再看t1中的这条记录的c是否等于'x'。
+
+优化器需要决定的是这两种方式哪种最优。
+
+## 5 执行器
+
+一条sql经过了前面几个模块的处理，就确定了如何去执行这条sql。执行器阶段就是执行这条sql。
+
+执行器在执行查询前还需要校验当前用户对于目标表是否有查询权限，如果没有查询权限，就会拒绝执行查询：“*ERROR 1142 (42000): SELECT command denied to user 'user'@'localhost'for table 'T'*”。
+
+通过权限校验后，就会调用存储引擎的接口查询对应的记录。（先查出这个表中满足条件的第一行，之后循环查取满足条件的下一行，直至遍历整个表或索引。）
