--- a/3.MySQL/1.mysql-infrastructure.md
+++ b/3.MySQL/1.mysql-infrastructure.md
@@ -54,7 +54,7 @@ SELECT * FROM T WHERE ID = 1;
 
 ## 4 优化器
 
-sql通过了分析器的分析后，在执行之前，还需要对sql做一次优化。比如有多个索引时决定索引的使用，比如在关联查询时，决定连接的顺序。
+sql通过了分析器的分析后，在执行之前，还需要对sql做一次优化。在优化器这一步，MySQL会知道**该怎么做**。比如有多个索引时决定索引的使用，比如在关联查询时，决定连接的顺序。
 
 还是拿sql举例：
 
