mysql redo log 与 binlog

--- a/3.MySQL/2.mysql-redo-log-binlog.md
+++ b/3.MySQL/2.mysql-redo-log-binlog.md
@@ -8,8 +8,8 @@
 
 WAL思想规定了：
 
-1. 在一次更新操作的变更落到磁盘上**之前**，**必须**保证对应的日志**先**存储到磁盘上。
-2. 在commit的日志被记录之前，必须保证其他所有日志均可靠地存储到磁盘上。
+1. 在一次更新操作的变更落到磁盘上**之前**，**必须**保证对应的日志**先**存储到磁盘上（日志文件中）。
+2. 在commit的日志被记录之前，必须保证其他所有日志均可靠地存储到磁盘上（日志文件中）。
 
 这里的1保证了原子性（Atomicity），2保证了持久性（Durability）。具体解释去必应搜一下:joy:。
 
@@ -19,3 +19,10 @@ WAL思想规定了：
 
 redo log是以日志文件的形式存在于文件系统中的，它的大小与数量均可以配置的，比方说，我们配置一组4个文件，每个文件大小为1G（`innodb_log_files_in_group=4`、`innodb_log_file_size=1073741824`）。这样启动MySQL后会在指定的redo log目录下生成4个日志文件（ib_logfile0、ib_logfile1、ib_logfile2、ib_logfile3）。
 
+![image-20211013151931043](assets/image-20211013151931043.png)
+
+从第一个日志文件开头开始写，一直写到最后一个日志文件末尾，又回到开头，如此循环。图中的`write pos`是当前写入redo log的位置，`check point`是开始擦除的位置，当`write pos`追上`check point`，会从`check point`开始向后擦除一段数据，并将`check point`推进到对应位置。**但是必须保证擦除的数据已经写入到数据文件中。**
+
+## 2 binlog
+
+相对于redo log，binlog更常被我们提及。前面我们提到的
