mysql redo log与binlog

--- a/3.MySQL/2.mysql-redo-log-binlog.md
+++ b/3.MySQL/2.mysql-redo-log-binlog.md
@@ -11,7 +11,7 @@ WAL思想规定了：
 1. 在一次更新操作的变更落到磁盘上**之前**，**必须**保证对应的日志**先**存储到磁盘上（日志文件中）。
 2. 在commit的日志被记录之前，必须保证其他所有日志均可靠地存储到磁盘上（日志文件中）。
 
-这里的1保证了原子性（Atomicity），2保证了持久性（Durability）。具体解释去必应搜一下:joy:。
+这里的1保证了原子性（Atomicity），2保证了持久性（Durability）。
 
 （*参考：[write-ahead-log-protocol](https://image1.slideserve.com/2209292/write-ahead-log-protocol-l.jpg)*与*[Write-Ahead Logging (WAL)](https://dsf.berkeley.edu/topics/lecs/dbprimer/sld075.htm)*）
 
@@ -21,8 +21,19 @@ redo log是以日志文件的形式存在于文件系统中的，它的大小与
 
 ![image-20211013151931043](assets/image-20211013151931043.png)
 
-从第一个日志文件开头开始写，一直写到最后一个日志文件末尾，又回到开头，如此循环。图中的`write pos`是当前写入redo log的位置，`check point`是开始擦除的位置，当`write pos`追上`check point`，会从`check point`开始向后擦除一段数据，并将`check point`推进到对应位置。**但是必须保证擦除的数据已经写入到数据文件中。**
+从第一个日志文件开头开始写，一直写到最后一个日志文件末尾，又回到开头，如此循环。图中的`write pos`是当前写入redo log的位置，`check point`表示已经刷新到磁盘上redo log的位置，也可以理解为开始擦除的位置（**因为擦除前必须保证数据已经写入到数据文件中**），当`write pos`追上`check point`，会从`check point`开始向后擦除一段数据，并将`check point`推进到对应位置。
+
+所以基于redo log的这种特性，在MySQL突然宕机时，重启后是可以根据redo log进行数据恢复的（crash safe）。
 
 ## 2 binlog
 
-相对于redo log，binlog更常被我们提及。前面我们提到的
+相对于redo log，binlog更常被我们提及。前面我们提到的MySQL的基础架构分为Server层与存储引擎层，redo log是存储引擎InnoDB的功能，binlog是Server层的功能。
+
+原先MySQL并不支持InnoDB，它自带的存储引擎是MyISAM，所以最开始只有binlog，而且binlog的定位是“**归档日志**”。binlog是在Server层做到，所有引擎都能用。
+
+binlog日志文件的写入方式是“追加写”，类似于一些日志的“滚存”，并不会覆盖已有的日志，所以它非常适合用来做归档，比如：备份数据库最近一个月的binlog。
+
+
+
+关于crash-safe与这俩日志的关系，可以看[这个](https://blog.csdn.net/shaochenshuo/article/details/73239949)，解释的比较详细。
+
