mysql redo log与binlogg

--- a/3.MySQL/2.mysql-redo-log-binlog.md
+++ b/3.MySQL/2.mysql-redo-log-binlog.md
@@ -33,7 +33,26 @@ redo log是以日志文件的形式存在于文件系统中的，它的大小与
 
 binlog日志文件的写入方式是“追加写”，类似于一些日志的“滚存”，并不会覆盖已有的日志，所以它非常适合用来做归档，比如：备份数据库最近一个月的binlog。
 
+binlog在什么时候被记录的呢？我们用一条sql来举例：
 
+```sql
+UPDATE T SET c = c + 1 WHERE ID = 2;
+```
+
+1. 执行器从存储引擎的接口中查得ID为2的这一行数据。
+2. 将这行数据的c列的值+1，得到新的行数据，调用存储引擎接口写回去。
+3. 存储引擎将这个更新操作写到redo log中，然后将新数据更新到内存中。此时redo log的状态是`prepare`，引擎告知执行器执行完成（可以commit了）。
+4. **执行器生成binlog，并将binlog写入磁盘。**
+5. 执行器执行commit（调用存储引擎的提交事务接口）。
+6. 存储引擎将redo log的状态改为`commit`，更新完成。
+
+![image-20211014204133644](assets/image-20211014204133644.png)
+
+上图蓝色的是存储引擎的行为，绿色的是执行器的行为。
+
+## 3 二阶段提交
+
+注意到上面提到的redo log的两个状态了吗（`prepare`与`commit`）？这种设计就是传说中的二阶段提交（Two-Phase Commit）。
 
 关于crash-safe与这俩日志的关系，可以看[这个](https://blog.csdn.net/shaochenshuo/article/details/73239949)，解释的比较详细。
 
