mysql redo log and binlog

--- a/3.MySQL/2.mysql-redo-log-binlog.md
+++ b/3.MySQL/2.mysql-redo-log-binlog.md
@@ -52,7 +52,16 @@ UPDATE T SET c = c + 1 WHERE ID = 2;
 
 ## 3 二阶段提交
 
-注意到上面提到的redo log的两个状态了吗（`prepare`与`commit`）？这种设计就是传说中的二阶段提交（Two-Phase Commit）。
+注意到上面提到的redo log的两个状态了吗（`prepare`与`commit`）？这种设计就是传说中的二阶段提交（Two-Phase Commit）。如果不使用二阶段提交会有什么问题？
 
-关于crash-safe与这俩日志的关系，可以看[这个](https://blog.csdn.net/shaochenshuo/article/details/73239949)，解释的比较详细。
+上面我们了解到redo log的写入意味着数据更新成功，没有了二阶段提交的设计的话，思考下这两个可能性：
+
+1. redo log在binlog之前写入，redo log写完就宕机了。
+2. binlog在 redo log 之前写入，binlog写完就宕机了。
+
+在1中，redo log写完就意味着更新已经入库，但是binlog还没来得及记录这条更新，如果存在主从复制的话，从库根据binlog复制过去的数据中就少了这条更新，主从不一致了。
+
+2与1正好相反，从库反而有这条更新，主库由于宕机，redo log中没有这条数据，丢了这条更新。
+
+另外，关于crash-safe与这俩日志的关系，可以看[这个](https://blog.csdn.net/shaochenshuo/article/details/73239949)，解释的比较详细。
 
