mysql备份与恢复

--- a/3.MySQL/3.mysql-backup-and-recovery.md
+++ b/3.MySQL/3.mysql-backup-and-recovery.md
@@ -8,7 +8,11 @@
 
 ![image-20211018230139080](assets/image-20211018230139080.png)
 
+这种记录只能做“增量重跑”，但是如果搭配定时的`mysqldump`（全量备份），就可以在全量备份恢复后的基础上，增量重跑某个时间范围的binlog，达到精确恢复的目的。
 
+比如生产环境设置了一小时一次的全量备份，运维同学在中午12点05分的时候删库跑路了，那么我们可以用中午12点的备份文件恢复数据库，再跑一遍binlog中12点00分至12点04分29秒的记录，就可以恢复到删库前的状态。
+
+还可以更精确一点，binlog中的记录都有对应的pos的（position），`mysqldump`时加上`--master-data`参数可以打印当前数据库的binlog的位置。全量恢复后，重跑binlog时以pos范围代替时间范围。
 
 详细的mysqldump参数：《[MySQL mysqldump数据导出详解](https://www.cnblogs.com/chenmh/p/5300370.html)》
 
