--- a/3.MySQL/4.mysql-transaction.md
+++ b/3.MySQL/4.mysql-transaction.md
@@ -48,16 +48,45 @@ ACID是保证数据库事务正确可靠的四个特性：
 - 读未提交（Read Uncommitted ）
 - 读已提交（Read Committed）
 - 可重复读（Repeatable Read）
-- 序列化（Serializable ）
+- 可串行化（Serializable ）
 
 ### 3.1 读未提交（Read Uncommitted ）
 
-读未提交是最低级别的隔离，在此级别下，一个事务能够读到其他事务未提交的改动，这就导致了“脏读”现象。这个级别等于是事务之间没做隔离。
+读未提交是最低级别的隔离，在此级别下，一个事务能够读到其他事务未提交的改动，这就导致了“脏读”现象。
 
 ### 3.2 读已提交（Read Committed）
 
 读已提交保证了事务中能够读取到的值必须是其他事务已经提交的内容，这杜绝了“脏读”现象。这个级别下，当前事务持有了当前行的读写锁，阻止了其他事务对改行数据的读写操作。
 
+对于*一致性读（consistent read）*，即使是同一个事务中的多次读，取的都是同一个快照中的内容。（快照是MVCC中的东西，下面讲）
+
+> 一致性读（consistent read），读操作是基于某个时间点的数据库快照，不用担心在同一时间其他并行的事务对相同的数据做变更操作。
+>
+> 参见：[consistent read](https://dev.mysql.com/doc/refman/5.7/en/glossary.html#glos_consistent_read)
+
+对于加锁读（`SELECT FOR UPDATE`或`LOCK IN SHARE MODE`）、`UPDATE`语句、`DELETE`语句，只会对指定索引行加锁，而不是用*间隙锁（gap lock）*，所以在锁定行之间是允许插入新行的（这就导致了幻读）。
+
+> 间隙锁（gap lock），其一种加在索引记录之间的间隙上，或是加在第一行索引记录之前，或是最后一行索引记录之后的一种锁。
+>
+> 参见：[gap lock](https://dev.mysql.com/doc/refman/5.7/en/glossary.html#glos_gap_lock)
+
 ### 3.3 可重复读（Repeatable Read）
 
-这个级别是MySQL的默认隔离级别。可重复读保证了事务从开始到结束，期间任何时候读到的数据行的内容都是一致的。在这个级别下，事务在第一个读操作会建立一个当前读的“快照”，事务的后续操作都是基于此“快照”做的（下面讲）。
+这个级别是**MySQL的默认隔离级别**。可重复读保证了事务从开始到结束，期间任何时候读到的数据行的内容都是一致的。
+
+对于一致性读（consistent read），其读的是同一个事务中，第一个读操作建立的快照。同一个事务中的多个不加锁的`SELECT`语句，是互不影响的，且结果是一致的。
+
+对于加锁读（`SELECT FOR UPDATE`或`LOCK IN SHARE MODE`）、`UPDATE`语句、`DELETE`语句，取决于语句使用的是唯一索引的唯一搜索条件，还是范围类型搜索条件。
+
+- 对于唯一索引的唯一搜索条件，会给命中的索引记录加锁，而非给其之前的间隙加锁。
+- 对于其他的搜索条件，会给索引范围加锁。其使用的是间隙锁（gap lock）或是 *下一键锁（next-key lock）*，这种锁会阻塞其他事务将新行插入到指定范围的索引上。
+
+> next-key lock，是指定索引记录的行锁与索引记录前的间隙锁的结合。
+>
+> 参见：[next-key lock](https://dev.mysql.com/doc/refman/5.7/en/glossary.html#glos_next_key_lock)
+
+### 3.4 可串行化（Serializable）
+
+这是隔离的最高级别，在这个级别下，会互相干扰的两个事务（比如分别读写同一张表）会串行执行。
+
+// (待修改)*这个级别有点类似可重复读，但是如果在 [`autocommit`](https://dev.mysql.com/doc/refman/5.7/en/server-system-variables.html#sysvar_autocommit)被禁用的情况下，InnoDB会将所有普通`SELECT`语句隐式地转换为 `SELECT ... LOCK IN SHARE MODE`*
