mysql事务隔离级别

--- a/3.MySQL/4.mysql-transaction.md
+++ b/3.MySQL/4.mysql-transaction.md
@@ -43,6 +43,8 @@ ACID是保证数据库事务正确可靠的四个特性：
 
 ## 3 隔离级别
 
+*（本节部分整理于：《[Transaction Isolation Levels](https://dev.mysql.com/doc/refman/5.7/en/innodb-transaction-isolation-levels.html)》）*
+
 对于上述提及的几个问题，本质上是不同“隔离”程度中会发生的现象，SQL标准定义了四个隔离级别：
 
 - 读未提交（Read Uncommitted ）
@@ -78,15 +80,81 @@ ACID是保证数据库事务正确可靠的四个特性：
 
 对于加锁读（`SELECT FOR UPDATE`或`LOCK IN SHARE MODE`）、`UPDATE`语句、`DELETE`语句，取决于语句使用的是唯一索引的唯一搜索条件，还是范围类型搜索条件。
 
-- 对于唯一索引的唯一搜索条件，会给命中的索引记录加锁，而非给其之前的间隙加锁。
-- 对于其他的搜索条件，会给索引范围加锁。其使用的是间隙锁（gap lock）或是 *下一键锁（next-key lock）*，这种锁会阻塞其他事务将新行插入到指定范围的索引上。
+- 对于唯一索引的唯一搜索条件，会给命中的索引记录加锁，而非给其之前的间隙加锁（间隙锁中的“加在命中的第一行索引记录之前”）。
+- 对于其他的搜索条件，会给索引范围加锁。其使用的是间隙锁（gap lock）或是 *下一键锁（next-key lock）*，这种锁会阻塞其他事务将新行插入到被锁定范围的索引上。
 
 > next-key lock，是指定索引记录的行锁与索引记录前的间隙锁的结合。
 >
 > 参见：[next-key lock](https://dev.mysql.com/doc/refman/5.7/en/glossary.html#glos_next_key_lock)
 
+对于Read Committed和Repeatable Read两个隔离级别的行加锁情况，我们用例子来辅助理解，假设有这张表与表中的5行数据：
+
+```mysql
+CREATE TABLE t (a INT NOT NULL, b INT) ENGINE = InnoDB;
+INSERT INTO t VALUES (1,2),(2,3),(3,2),(4,3),(5,2);
+COMMIT;
+```
+
+先启动Session A，对`b=3`的行执行更新：
+
+```mysql
+# Session A
+START TRANSACTION;
+UPDATE t SET b = 5 WHERE b = 3;
+```
+
+再启动Session B，对`b=2`的行执行更新：
+
+```mysql
+# Session B
+UPDATE t SET b = 4 WHERE b = 2;
+```
+
+作为InnoDB引擎，如果想要执行`UPDATE`语句的话，会先将读到的行加上一个排他锁（下面示例中是x-lock），然后再判断是否要修改这一行。如果不需要修改，那么会释放该行锁，如果修改了，那么这行锁会持续持有到事务结束。
+
+对于Repeatable Read级别，Session A中的`UDPATE`会将所有行加锁，并持有到事务结束：
+
+```
+x-lock(1,2); 持有x-lock
+x-lock(2,3); update(2,3) to (2,5); 持有x-lock
+x-lock(3,2); 持有x-lock
+x-lock(4,3); update(4,3) to (4,5); 持有x-lock
+x-lock(5,2); 持有x-lock
+```
+
+在Session B中的`UPDATE`，会阻塞，直至Session A的事务提交或回滚：
+
+```
+x-lock(1,2); 阻塞等待
+```
+
+对于Read Committed级别来说，不需要修改的行会立刻释放锁，只有需要修改的行才会阻塞到事务结束， Session A：
+
+```
+x-lock(1,2); unlock(1,2)
+x-lock(2,3); update(2,3) to (2,5); 持有锁x-lock
+x-lock(3,2); unlock(3,2)
+x-lock(4,3); update(4,3) to (4,5); 持有锁x-lock
+x-lock(5,2); unlock(5,2)
+```
+
+Session B：
+
+```
+x-lock(1,2); update(1,2) to (1,4); 持有锁x-lock
+x-lock(2,3); unlock(2,3)
+x-lock(3,2); update(3,2) to (3,4); 持有锁x-lock
+x-lock(4,3); unlock(4,3)
+x-lock(5,2); update(5,2) to (5,4); 持有锁x-lock
+```
+
 ### 3.4 可串行化（Serializable）
 
 这是隔离的最高级别，在这个级别下，会互相干扰的两个事务（比如分别读写同一张表）会串行执行。
 
-// (待修改)*这个级别有点类似可重复读，但是如果在 [`autocommit`](https://dev.mysql.com/doc/refman/5.7/en/server-system-variables.html#sysvar_autocommit)被禁用的情况下，InnoDB会将所有普通`SELECT`语句隐式地转换为 `SELECT ... LOCK IN SHARE MODE`*
+这个级别有点类似可重复读，但是如果在 [`autocommit`](https://dev.mysql.com/doc/refman/5.7/en/server-system-variables.html#sysvar_autocommit)被禁用的情况下，InnoDB会将所有普通`SELECT`语句隐式地转换为 `SELECT ... LOCK IN SHARE MODE`（这会使这条`SELECT`阻塞，直至其他事务提交，Repeatable Read级别下，普通`SELECT`读的是快照，不会阻塞。）。如果`autocommit`被启用，普通的`SELECT`语句（一致性读）读取的是自己的快照，不会为其他事务所阻塞。（如果实际场景中的确需要普通读也被阻塞的话，需要把`autocommit`关掉。）
+
+## 4 多版本并发控制（MVCC）
+
+多版本并发控制（Multi-Version Concurrency Control）
+
