试试sql在docsify中的样式

--- a/3.MySQL/4.mysql-transaction.md
+++ b/3.MySQL/4.mysql-transaction.md
@@ -89,7 +89,7 @@ ACID是保证数据库事务正确可靠的四个特性：
 
 对于Read Committed和Repeatable Read两个隔离级别的行加锁情况，我们用例子来辅助理解，假设有这张表与表中的5行数据：
 
-```mysql
+```sql
 CREATE TABLE t (a INT NOT NULL, b INT) ENGINE = InnoDB;
 INSERT INTO t VALUES (1,2),(2,3),(3,2),(4,3),(5,2);
 COMMIT;
