mysql事务-多版本并发控制

--- a/3.MySQL/4.mysql-transaction.md
+++ b/3.MySQL/4.mysql-transaction.md
@@ -43,7 +43,7 @@ ACID是保证数据库事务正确可靠的四个特性：
 
 ## 3 隔离级别
 
-*（本节部分整理于：《[Transaction Isolation Levels](https://dev.mysql.com/doc/refman/5.7/en/innodb-transaction-isolation-levels.html)》）*
+*（本节部分整理于：《[14.7.2.1 Transaction Isolation Levels](https://dev.mysql.com/doc/refman/5.7/en/innodb-transaction-isolation-levels.html)》）*
 
 对于上述提及的几个问题，本质上是不同“隔离”程度中会发生的现象，SQL标准定义了四个隔离级别：
 
@@ -89,7 +89,7 @@ ACID是保证数据库事务正确可靠的四个特性：
 
 对于Read Committed和Repeatable Read两个隔离级别的行加锁情况，我们用例子来辅助理解，假设有这张表与表中的5行数据：
 
-```sql
+```mysql
 CREATE TABLE t (a INT NOT NULL, b INT) ENGINE = InnoDB;
 INSERT INTO t VALUES (1,2),(2,3),(3,2),(4,3),(5,2);
 COMMIT;
@@ -156,5 +156,10 @@ x-lock(5,2); update(5,2) to (5,4); 持有锁x-lock
 
 ## 4 多版本并发控制（MVCC）
 
-多版本并发控制（Multi-Version Concurrency Control）
+*（本节部分整理于：《[14.3 InnoDB Multi-Versioning](https://dev.mysql.com/doc/refman/5.7/en/innodb-multi-versioning.html)》）*
 
+多版本并发控制（Multi-Version Concurrency Control）。InnoDB是个多版本存储引擎，为了支持一些事务的特性，比如并发、回滚，InnoDB保留了那些发生了变更的行的历史版本。这些历史版本数据以“回滚段（rollback segment）”的数据结构存储在系统表空间和[undo表空间](https://dev.mysql.com/doc/refman/5.7/en/innodb-undo-tablespaces.html)。根据“回滚段”中的信息，InnoDB可以实现事务的回滚，以及上面提及的一致性读（快照读）。
+
+![image-20211021203955201](assets/image-20211021203955201.png)
+
+上图中假设了某个值c从1陆续变更为2、3、4，那么在回滚段中就有几个对应的回滚信息。那么对于不同时刻启动的事务，就会看到不同的read-view，在图中的视图A、B、C中分别看到的值是1、2、4，同一条行数据存在着不同的版本。
