--- a/3.MySQL/4.mysql-transaction.md
+++ b/3.MySQL/4.mysql-transaction.md
@@ -158,8 +158,24 @@ x-lock(5,2); update(5,2) to (5,4); 持有锁x-lock
 
 *（本节部分整理于：《[14.3 InnoDB Multi-Versioning](https://dev.mysql.com/doc/refman/5.7/en/innodb-multi-versioning.html)》）*
 
-多版本并发控制（Multi-Version Concurrency Control）。InnoDB是个多版本存储引擎，为了支持一些事务的特性，比如并发、回滚，InnoDB保留了那些发生了变更的行的历史版本。这些历史版本数据以“回滚段（rollback segment）”的数据结构存储在系统表空间和[undo表空间](https://dev.mysql.com/doc/refman/5.7/en/innodb-undo-tablespaces.html)。根据“回滚段”中的信息，InnoDB可以实现事务的回滚，以及上面提及的一致性读（快照读）。
+多版本并发控制（Multi-Version Concurrency Control）。InnoDB是个多版本存储引擎，为了支持一些事务的特性，比如并发、回滚，InnoDB保留了那些发生了变更的行的历史版本。这些历史版本数据以“回滚段（rollback segment）”的数据结构存储在系统表空间和[undo表空间](https://dev.mysql.com/doc/refman/5.7/en/innodb-undo-tablespaces.html)。
+
+“回滚段”有啥作用：
+
+1. 根据回滚段中的信息，InnoDB可以在事务需要的时候操作回滚。
+2. 回滚段信息还可以拿来构建行数据的历史版本，为一致性读使用。
 
 ![image-20211021203955201](assets/image-20211021203955201.png)
 
 上图中假设了某个值c从1陆续变更为2、3、4，那么在回滚段中就有几个对应的回滚信息。那么对于不同时刻启动的事务，就会看到不同的read-view，在图中的视图A、B、C中分别看到的值是1、2、4，同一条行数据存在着不同的版本。
+
+在每行数据上，InnoDB增加了三个隐藏字段（是select不出来的）：
+
+- `DB_TRX_ID`，事务id，一个6字节的字段，表示了该行上最后一次更新或插入的事务的id。当然，`DELETE`操作在内部其实是一次更新操作（行数据上还有个bit位用来标识是否被删除）。
+- `DB_ROLL_PTR`：回滚指针，一个7字节的字段，其指向了回滚段中的一个undo log记录。如果该行发生了更新，那么这个undo log记录就包含了重建该行更新前状态的必要的信息。
+- `DB_ROW_ID`：row id，一个6字节的字段，存放了行新增时的“单调自增”的row id。如果InnoDB需要自动创建聚簇索引，那么索引中会包含这个row id。否则的话，这个row id不会出现在任何索引中。（聚簇索引一般不是用的你建表时的主键ID嘛，如果没指定主键ID的话，那么InnoDB会使用这个隐式的row id来做聚簇索引。）
+
+undo log在回滚段上还被区分为新增的undo log和更新的undo log。新增的undo log只有在事务需要回滚的时候用到，只要事务一提交，新增的undo log就可以立刻被丢弃。但是更新的undo log除了被用在回滚，还被用在一致性读上，只有在当前没有任何一致性读的快照，依赖于该更新updo log中的行历史版本信息的轻快下，这个undo log才能被丢弃。
+
+所以一般建议及时的提交事务，包括那些只是一致性读的事务，不要搞长事务，否则InnoDB没法及时释放哪些更新的updo log，这会导致回滚段的持续膨胀，最终撑爆其占用的表空间。
+
