--- a/3.MySQL/5.mysql-indexes.md
+++ b/3.MySQL/5.mysql-indexes.md
@@ -2,3 +2,12 @@
 
 索引对于MySQL使用者来说是个非常常见的词汇，也是数据库系统中的非常重要的概念之一。**索引是通过指定列值快速查找特定行的技术。**其目的就是提高查询数据的效率，索引的英文*index*，也是目录的意思，就像在一本书中寻找特定内容，可以通过目录快速定位到目标内容附近。如果没有目录的话，你得从这本书的第一页开始查找。
 
+MySQL中的索引是存储引擎的实现，所以不同引擎的索引的实现方式和工作原理可能都不相同，大部分索引的类型都是B+树，一些用Hash表的比如MEMORY引擎，其他还有FULLTEXT等等。我们这里只讲讲InnoDB的索引。
+
+## 1 聚簇索引与辅助索引
+
+InnoDB使用了B+树索引模型，每一个索引都对应一棵B+树。这里又可以细分为聚簇索引（Clustered Index）和非聚簇索引（也叫辅助索引Secondary Index）。它俩的区别是：
+
+- 聚簇索引 - 一般等同于主键索引，对于非叶子节点，存放的是索引值，叶子节点是整行数据。
+- 辅助索引 - 非主键索引，比如组合索引，其非叶子节点存放的是键值，叶子节点存放的是主键。（这里的“辅助”比较形象，查询条件命中辅助索引，然后拿到主键再去聚簇索引查行数据）
+
