--- a/3.MySQL/5.mysql-indexes.md
+++ b/3.MySQL/5.mysql-indexes.md
@@ -9,5 +9,37 @@ MySQL中的索引是存储引擎的实现，所以不同引擎的索引的实现
 InnoDB使用了B+树索引模型，每一个索引都对应一棵B+树。这里又可以细分为聚簇索引（Clustered Index）和非聚簇索引（也叫辅助索引Secondary Index）。它俩的区别是：
 
 - 聚簇索引 - 一般等同于主键索引，对于非叶子节点，存放的是索引值，叶子节点是整行数据。
-- 辅助索引 - 非主键索引，比如组合索引，其非叶子节点存放的是键值，叶子节点存放的是主键。（这里的“辅助”比较形象，查询条件命中辅助索引，然后拿到主键再去聚簇索引查行数据）
+- 辅助索引 - 非聚簇索引的都是辅助索引，比如组合索引，其非叶子节点存放的是键值，叶子节点存放的是主键。（这里的“辅助”比较形象，查询条件命中辅助索引，然后拿到主键再去聚簇索引查行数据）
 
+下面我们举个例子来帮助理解，
+
+```mysql
+CREATE TABLE t (id INT PRIMARY KEY, c INT, data_c VARCHAR(8)INDEX(c)) ENGINE = InnoDB;
+INSERT INTO t (id, c) VALUES (1,200),(2,300),(3,400),(4,500),(5,600);
+COMMIT;
+```
+
+现在我们有了个表t，列*id*为主键，列*c*为辅助索引列，`data_c`为某数据列。那么会存在两棵索引树：
+
+![image-20211025205211970](assets/image-20211025205211970.png)
+
+如果有一条查询sql：
+
+```mysql
+SELECT * FROM t WHERE id = 3;
+```
+
+那么只需要在聚簇索引中，找到id=3的叶子节点，从该叶子节点得到整行数据。
+
+但如果有一条查询sql是：
+
+```mysql
+SELECT * FROM t WHERE c = 300;
+```
+
+那么需要：
+
+1. 从辅助索引(c)上，找到c=300的节点，从该叶子节点上得到对应的行主键（id）是3。
+2. 再从聚簇索引上找id=3的节点，从叶子节点上取得整行数据。
+
+第二个sql这个查询过程，我们称之为**回表**。
