--- a/3.MySQL/5.mysql-indexes.md
+++ b/3.MySQL/5.mysql-indexes.md
@@ -19,7 +19,7 @@ INSERT INTO t (id, c) VALUES (1,200),(2,300),(3,400),(4,500),(5,600);
 COMMIT;
 ```
 
-现在我们有了个表t，列*id*为主键，列*c*为辅助索引列，`data_c`为某数据列。那么会存在两棵索引树：
+现在我们有了个表t，列*id*为主键，列*c*为辅助索引列，*data_c*为某数据列。那么会存在两棵索引树：
 
 ![image-20211025205211970](assets/image-20211025205211970.png)
 
@@ -42,4 +42,29 @@ SELECT * FROM t WHERE c = 300;
 1. 从辅助索引(c)上，找到c=300的节点，从该叶子节点上得到对应的行主键（id）是3。
 2. 再从聚簇索引上找id=3的节点，从叶子节点上取得整行数据。
 
-第二个sql这个查询过程，我们称之为**回表**。
+第二个sql的这个查询过程，我们称之为**回表**。
+
+## 2 页合并与页分裂
+
+这俩概念还是蛮复杂的，但是它们与InnoDB的性能息息相关，是设计数据库索引时必须要考虑到的东西。
+
+### 2.1 数据文件结构
+
+我们先从数据文件结构讲起，一般来说，一张表会对应一个data目录下的数据文件（`innodb_file_per_table=1`），比如我们在test_db库中建一张test_table表，在data目录下就会生成对应的表文件：
+
+```
+data/
+-test_db/
+---test_table.frm
+---test_table.ibd
+```
+
+这里的`test_table.ibd`就是test_table表的数据文件，一般我们也叫它表空间。
+
+表空间由多个段（**Segment**）组成。有叶子节点段（leaf node segment）、非叶子节点段（non-leaf node segment）、回滚段（rollback segment）。
+
+每个段被划分为多个区（**Extent**）。
+
+每个区是多个页（**Page**）组成的集合。
+
+（就像套娃一样。。）
