--- a/3.MySQL/5.mysql-indexes.md
+++ b/3.MySQL/5.mysql-indexes.md
@@ -67,4 +67,20 @@ data/
 
 每个区是多个页（**Page**）组成的集合。
 
+每一页中又有多条行数据。
+
 （就像套娃一样。。）
+
+![image-20211027210141302](assets/image-20211027210141302.png)
+
+默认一个页的大小是16KB，那么一个extent包含64个页，extent的大小固定是1MB，当页的大小是4KB、8KB、16KB时，extent的大小都是1MB。MySQL 5.7.6以后支持了32KB和64KB的页：
+
+| Page Size | Extent Size | Pages in an extent |
+| :-------: | :---------: | :----------------: |
+|    4KB    |     1MB     |        256         |
+|    8KB    |     1MB     |        128         |
+|   16KB    |     1MB     |         64         |
+|   32KB    |     2MB     |         64         |
+|   64KB    |     4MB     |         64         |
+
+*（参考[glossary-extent](https://dev.mysql.com/doc/refman/5.7/en/glossary.html#glos_extent)及[InnoDB: Tablespace Space Management](https://dev.mysql.com/blog-archive/innodb-tablespace-space-management/)）*
