页合并与分裂

--- a/3.MySQL/5.mysql-indexes.md
+++ b/3.MySQL/5.mysql-indexes.md
@@ -84,3 +84,21 @@ data/
 |   64KB    |     4MB     |         64         |
 
 *（参考[glossary-extent](https://dev.mysql.com/doc/refman/5.7/en/glossary.html#glos_extent)及[InnoDB: Tablespace Space Management](https://dev.mysql.com/blog-archive/innodb-tablespace-space-management/)）*
+
+## 2.2 页的结构
+
+## 2.3 页合并与页分裂
+
+[InnoDB Page Merging and Page Splitting](https://www.percona.com/blog/2017/04/10/innodb-page-merging-and-page-splitting/)
+
+上面我们提到页的大小都是固定的，我们拿聚簇索引来讲，如果建表时选用了自增长的主键（auto_increment），那么在每个页上，记录都是顺序添加的。比如insert记录1、2、3、4，那么在第一页，记录1、2、3、4依次按顺序被添加：
+
+![image-20211101232219995](assets/image-20211101232219995.png)
+
+每个记录的大小可能会有差异。我们陆续向表中新增记录，直到快要填满这一页，再继续往这页中新增记录的话肯定放不下了：
+
+![image-20211101232942214](assets/image-20211101232942214.png)
+
+当一页被放满后，新增的记录会被放到下一页中：
+
+![image-20211101233548697](assets/image-20211101233548697.png)
