java8之Optional - 判空处理

--- a/1.Java/3.Java8/1.Optional.md
+++ b/1.Java/3.Java8/1.Optional.md
@@ -44,13 +44,13 @@ public final class Optional<T> {
 ## 2 核心用法 - 构建（of与ofNullable）
 
 ```java
-// 从非空入参构建Optional
+// 1. 从非空入参构建Optional
 public static <T> Optional<T> of(T value) {
     // 此构造方法若value为空直接抛出NullPointerException
     return new Optional<>(value);
 }
 
-// 构建Optional，允许入参为空
+// 2. 构建Optional，允许入参为空
 public static <T> Optional<T> ofNullable(T value) {
     // value为空则返回空值常量，否则构造目标Optional对象返回
     return value == null ? empty() : of(value);
@@ -70,4 +70,51 @@ public static<T> Optional<T> empty() {
 2. `ofNullable`方法允许为空的入参，空值判断写法里基本都用的这个方法。
 
 ## 3 核心用法 - 判空及处理（orElse与orElseGet与orElseThrow）
+
+```java
+// 1. 不为空的话返回当前对象，否则返回指定对象
+public T orElse(T other) {
+    return value != null ? value : other;
+}
+
+// 2. 不为空的话返回当前对象，否则执行目标逻辑，并返回目标结果
+public T orElseGet(Supplier<? extends T> other) {
+    return value != null ? value : other.get();
+}
+
+// 3. 不为空的话返回当前对象，否则执行目标逻辑，并抛出指定异常
+public <X extends Throwable> T orElseThrow(Supplier<? extends X> exceptionSupplier) throws X {
+    if (value != null) {
+        return value;
+    } else {
+        throw exceptionSupplier.get();
+    }
+}
+```
+
+1. `orElse`方法简单描述就是“为空取默认值”，当目标对象是null时，返回入参的对象。举个例子，某个场景中需要获取配置中的字符集，未配置的话默认使用“UTF-8”：
+
+   ```java
+   public void Charset getCharset() {
+       return Optional.ofNullable(config.getCharset()).orElse(StandardCharsets.UTF_8);
+   }
+   ```
+
+2. `orElseGet`方法类似于`orElse`，其目的是在目标对象为null时，能够执行一段指定的逻辑，搭配lambda表达式，可以顺滑地使用该方法。还是上面那个例子，未配置字符集的话，我们想从某个方法中获取字符集：
+
+   ```java
+   public void Charset getCharset() {
+       return Optional.ofNullable(config.getCharset()).orElseGet(() -> getDefaultCharset());
+   }
+   ```
+
+3. `orElseThrow`方法的目的是在目标对象为null时，直接抛出自定义异常：
+
+   ```java
+   public void Charset getCharset() {
+       return Optional.ofNullable(config.getCharset()).orElseThrow(() -> new RuntimeException("Charset NOT s"));
+   }
+   ```
+
+   
 
